--- a/main.css
+++ b/main.css
@@ -17,6 +17,8 @@
     margin-right: 5vw;
     margin-top: 5vh;
     margin-bottom: 5vh;
+    transition: color 1s;
+    transition-delay: 2s;
 }
 
 .image > img{
@@ -32,7 +34,17 @@
     width: calc(100%);
     height: calc(100%);
     position: absolute;
-    transition: box-shadow 1s;
+    transition: box-shadow 2s;
+}
+
+.image:hover{
+    color: white;
+    text-align: center;
+}
+
+.image{
+    color: black;
+    text-align: center;
 }
 
 .image:hover:after{
@@ -150,7 +162,7 @@ p{
 #cred{
     text-align: center;
     position: absolute;
-    top: 90%;
+    top: 99%;
     left: 50%;
     transform: translate(-50%, -100%); /* I must say I love this SO-based trick */
     font-size: 0.8em;
